cargo-features = ["codegen-backend"]

[package]
name = "bevy_pg_terrain_editor_tools"
version = "0.1.0"
authors = ["Patrick Chodowski <chodowski.patrick@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
bevy = { version = "0.17", default-features = true}
bevy_pg_editor_tools = {git="https://www.github.com/PatrickChodowski/bevy_pg_editor_tools"}
bevy_enhanced_input = "0.19.3"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
libm = "0.2.11"
noise = "0.9.0"

[profile.dev]
opt-level = 1
